Prevent <code> elements from wrapping to the next line

--- a/docs/src/templates/css/docs.css
+++ b/docs/src/templates/css/docs.css
@@ -111,6 +111,7 @@
   padding: 0;
   font-size: inherit;
   font-family: monospace;
+  white-space: nowrap;
 }
 
 .content h2,
